name:                HuntTheWumpus
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/CMPT333N111-18S/RojasNi-FinalProject
license:             BSD3
license-file:        LICENSE
author:              Claudia Rojas, Si Ya Ni, and Matthew A Johnson
maintainer:          claudia.rojas1@marist.edu, si.ni1@marist.edu
copyright:           2018 Matthew A Johnson
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client,Server
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.1
                     , json
                     , http-server >= 1.0.6
                     , network-uri >= 2.6.1
                     , utf8-string
                     , HTTP
                     , bytestring
  default-language:    Haskell2010

executable HuntTheWumpus-Server
  hs-source-dirs:      app
  main-is:             HuntServer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HuntTheWumpus
  default-language:    Haskell2010

executable HuntTheWumpus-Client
  hs-source-dirs:      app
  main-is:             HuntClient.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , network-uri
                     , HuntTheWumpus
  default-language:    Haskell2010

test-suite HuntTheWumpus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HuntTheWumpus
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CMPT333N111-18S/RojasNi-FinalProject/HuntTheWumpus
